# golf_score_recog

./: .gitignore  claude_api_text_01.py  config.py  crop_coordinates.py  crop_coordinates_2.json  image_clean_tst_01.py  image_crop_test_01.py  image_crop_test_03.py  img_to_text_01.py  img_to_text_02.py  img_to_text_03.py  main.py  num_img_clean_02.py  pyproject.toml  readme.md  requirements.txt  scoring.py  table_recog_tst_02.py  table_recog_tst_04.py  table_recog_tst_06.py  table_recog_tst_09.py  table_recog_tst_10.py  table_recog_tst_14.py  table_recog_tst_19.py  table_recog_tst_20.py  table_recog_tst_21.py  table_recog_tst_22.py  table_recog_tst_24.py  table_recog_tst_25.py  table_recog_tst_26.py
.cursor/: mcp.json
docs/: 개발노트.txt
modules/: claude_converter.py  image_cleaner.py  image_cropper.py  ocr_converter.py  postprocessing.py  preprocessing.py  simple_ocr_crop.py  symbol_detector.py  template_matcher.py  utils.py
past_code/: claude_api_test_04.py  claude_api_test_05.py  claude_api_test_06.py  claude_api_text_02_use.py  claude_api_text_03.py  convert_num_tst_01.py  convert_num_tst_02_use.py  convert_num_tst_03.py  image_crop_test_02.py  image_crop_test_03.py  num_img_clean_01.py  table_recog_test_29.py  table_recog_tst_01.py  table_recog_tst_03.py  table_recog_tst_05.py  table_recog_tst_07.py  table_recog_tst_08.py  table_recog_tst_11.py  table_recog_tst_12.py  table_recog_tst_13.py  table_recog_tst_15.py  table_recog_tst_16.py  table_recog_tst_17.py  table_recog_tst_18.py  table_recog_tst_19.py  table_recog_tst_23.py  table_recog_tst_26.py  tmp.py  (+1 more)
(+93 files in other folders)
